--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -14,7 +14,7 @@
 
     <select name="pizza" id="pizza">
 
-        <option th:each="pizza : ${pizza}"
+        <option th:each="pizza : ${pizzas}"
 
         th:value="${pizza}"
 
