--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,14 +6,14 @@
 <body>
 <form th:action="@{/index}" th:object="${bruger}" th:method="post">
     <label for="email">Indtast venligst din email:</label>
-    <input type="email" id="email" name="email" required>
+    <input type="email" id="email" th:field="*{email}" required>
     <label for="password">Indtast venligst dit password</label>
-    <input type="password" id="password" name="password" required>
+    <input type="password" id="password" th:field="*{password}" required>
 
-    <div class="wrapper" style="text-align: center;">
+
         <a href="/register">Registrer</a>
         <button type="login">Login</button>
-    </div>
+
 </form>
 
 <p th:if="${error}" th:text="${error}" style="color:deeppink;"></p>
